header mobile mobile container not showing up fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -200,6 +200,11 @@ header {
   align-items: center;
 }
 
+.profile-container-mobile {
+  display: none;
+  align-items: center;
+}
+
 .profile-pic-nav {
   width: 40px;
   height: 40px;
@@ -393,6 +398,9 @@ header {
   .btn-order,
   .profile-container {
     display: none;
+  }
+  .profile-container-mobile {
+    display: flex;
   }
   .hamburger {
     display: flex;
